[package]
name = "raytracer"
version = "0.1.0"
authors = ["Pseudo Photograph Company of ACM <ppca@ppca.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"

console = "0.9.1"    # console text format
indicatif = "0.16.2" # progress bar
